# CodeWarPython2025

./: README.md  alembic.ini  cars.db  mkdocs.yml  pyproject.toml  requirements.txt
Api_Carros/: app.py  dash_app.py  database.py  models.py  routers.py  schemas.py
Api_Carros/assets/: styles.css
docs/: index.md
migrations/: env.py
migrations/versions/: 1373c5f6907e_create_cars_table.py  2397380298e1_create_cars_table.py  3cc5f25e3f49_create_cars_table.py  cf0a798af797_criação_inicial.py
